tdf#132807 DOCX import: fix top auto margin in lists

at paragraph style based numbering.

See also commit 99b2d53346d4b01b491cd1f7fae3304ac0572e12
(tdf#132802 DOCX import: fix list bottom auto margins).

Change-Id: I6bfea3ace5c94f9d45267e309a21ac8a97c20a37
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/94111
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>